[package]
name = "surrealdb-beta-10-lockup-regression"
version = "0.0.0"
edition = "2021"
authors = ["Cameron <cameron@drivenow.com.au>"]

[dependencies]
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "full",
] }
rust_decimal = "1.28.0"
rust_decimal_macros = "1.28.0"
surrealdb = { package = "surrealdb", version = "=1.0.0-beta.10", features = [
    "kv-mem",
    "kv-rocksdb",
] }
