[package]
name = "surrealdb-beta-10-lockup-regression"
version = "0.0.0"
edition = "2021"
authors = ["Cameron <cameron@drivenow.com.au>"]

[dependencies]
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "full",
] }
rust_decimal = { version = "1.31.0", features = ["maths", "serde-str"] }
rust_decimal_macros = "1.31.0"

surrealdb = { version = "=1.0.0-beta.12", features = [
    "kv-mem",
    "kv-rocksdb",
] }
